--- a/src/main/resources/templates/CreateProduct.html
+++ b/src/main/resources/templates/CreateProduct.html
@@ -10,6 +10,10 @@
 <div class="container">
     <h3>Create New Product</h3>
 
+    <div th:if="${error}" class="alert alert-danger">
+        <p th:text="${error}"></p>
+    </div>
+
     <form th:action="@{/product/create}" th:object="${product}" method="post">
         <div class="form-group">
             <label for="nameInput">Name</label>
